Renamed base app runner and added docs